--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <p>Disccusion</p>
   <hr>
   <a href="#"><img src="img/fc.jpg" alt="" style="width:31%;"></a>
-  <a href="#"><img src="img/in.jpg" alt="" style="width:31%;"></a>
+  <a href="#"><img src="img/IN.jpg" alt="" style="width:31%;"></a>
   <a href="#"><img src="img/reddit.jpg" alt="" style="width:31%;"></a>
   <a href="#"><img src="img/yt.jpg" alt="" style="width:31%;"></a>
   <a href="#"><img src="img/TW.jpg" alt="" style="width:31%;"></a>
