--- a/Safezone.html
+++ b/Safezone.html
@@ -1,6 +1,6 @@
 
 <link rel="stylesheet" href="style1.css">
-
+dsasdasdasd
 <div class="leftdiv">
   <div><img src="img/Deadsideicon.jpg" class="mainimg"><br><br></div>
   <div class="leftdiv2">
